--- a/2010/thesis/first_el_measurement.tex
+++ b/2010/thesis/first_el_measurement.tex
@@ -4,19 +4,19 @@ DPE, SD, MC
 
 \chapter[felm]{The first elastic scattering measurement at the LHC}
 
-This chapter is devoted to the first measurement of the elastic scattering differential cross-section at the LHC. This achievement, published in \bref{totem11}, is a result of efforts of the entire TOTEM collaboration. After a brief overview of the analysis procedure, we will focus on the contributions by the author of this thesis.
+This chapter is devoted to the first measurement of the elastic scattering differential cross-section at the \abb{LHC}. This achievement, published in \bref{totem11}, is a result of efforts of the entire \abb{TOTEM} collaboration. After a brief overview of the analysis procedure, we will focus on the contributions by the author of this thesis.
 
-This analysis is based on the data from 29-30 October, when the RPs were approached to $7\si$ from the beam and the LHC was running at the standard 2010 optics with $\be^* = 3.5\un{m}$. Only the $220\un{m}$ stations were used. The horizontal pots were inserted only at the end of the run, just for alignment reasons. Most of the running time they were retracted not to disturb the elastic proton measurement (done with vertical pots only, see e.g.~\Fg{ttm hit distribution} right). The event sample used for the analysis (with horizontal RPs retracted) corresponds to an integrated luminosity of $6.1\un{nb^-1}$.
+This analysis is based on the data from 29-30 October, when the \abb{RP}s were approached to $7\si$ from the beam and the \abb{LHC} was running at the standard 2010 optics with $\be^* = 3.5\un{m}$. Only the $220\un{m}$ stations were used. The horizontal pots were inserted only at the end of the run, just for alignment reasons. Most of the running time they were retracted not to disturb the elastic proton measurement (done with vertical pots only, see e.g.~\Fg{ttm hit distribution} right). The event sample used for the analysis (with horizontal \abb{RP}s retracted) corresponds to an integrated luminosity of $6.1\un{nb^-1}$.
 
 \fig{fig/pdf/felm_scheme.pdf}{felm scheme}{The analysis work-flow, from raw data to the differential cross-section of the elastic scattering.}
 
-\Fg{felm scheme} reviews the analysis steps, each of them is briefly described below. But before going into details, let us explain the terminology used. The sector 45 (56) is called left (right) arm of the TOTEM experiment. The elastic events involve two protons with practically opposite directions (up to beam divergence). Thus from detector point of view, they split into two groups -- with top RPs active in the sector 45 (so called \em{diagonal} 45 top -- 56 bottom) or with top RPs active in the sector 56 (diagonal 45 bottom -- 56 top).
+\Fg{felm scheme} reviews the analysis steps, each of them is briefly described below. But before going into details, let us explain the terminology used. The sector 45 (56) is called left (right) arm of the \abb{TOTEM} experiment. The elastic events involve two protons with practically opposite directions (up to beam divergence). Thus from detector point of view, they split into two groups -- with top \abb{RP}s active in the sector 45 (so called \em{diagonal} 45 top -- 56 bottom) or with top \abb{RP}s active in the sector 56 (diagonal 45 bottom -- 56 top).
 
-\> The {\bf alignment} has been performed almost as described in \Sc{al}. We have used the LVDT callibration from the latest collimation alignment (see \Tb{al lvdt off}), then the track-based alignment method (with the final constraints) has been applied (see \Sc{al lhc res}). These have been followed by the profile alignment (\Sc{al prof}), but no elastic alignment (\Sc{al elast}) has  been performed. The reason has been to refrain from biasing the event selection in any way. However, an alternative of method 1 from \Sc{al elast} has been employed. For that a sample of low-$\xi$ protons has been used. In this way we have obtained the horizontal alignment with a reasonable precision (below $10\un{\mu m}$), but the vertical misalignment has remained of the order $\O{100\un{\mu m}}$ (see \Eq{al window to dp uncer}) -- this will be addressed in the step ``final vertical alignment''.
+\> The {\bf alignment} has been performed almost as described in \Sc{al}. We have used the \abb{LVDT} callibration from the latest collimation alignment (see \Tb{al lvdt off}), then the track-based alignment method (with the final constraints) has been applied (see \Sc{al lhc res}). These have been followed by the profile alignment (\Sc{al prof}), but no elastic alignment (\Sc{al elast}) has  been performed. The reason has been to refrain from biasing the event selection in any way. However, an alternative of method 1 from \Sc{al elast} has been employed. For that a sample of low-$\xi$ protons has been used. In this way we have obtained the horizontal alignment with a reasonable precision (below $10\un{\mu m}$), but the vertical misalignment has remained of the order $\O{100\un{\mu m}}$ (see \Eq{al window to dp uncer}) -- this will be addressed in the step ``final vertical alignment''.
 
-\> {\bf Optics tuning}. Various measurable quantities (including the elastic peak titls, see \Tb{al el yx}) have been used to finetune the optics by optimzing the rotations and strengths of the LHC magnets within their nominal uncertainties.
+\> {\bf Optics tuning}. Various measurable quantities (including the elastic peak titls, see \Tb{al el yx}) have been used to finetune the optics by optimzing the rotations and strengths of the \abb{LHC} magnets within their nominal uncertainties.
 
-\> In the {\bf reconstruction} step, the projections of the scattering angle at IP (see \Eq{ttm th x y}) are deduced from the RP measurements. For each projection a different strategy is used, in order to minimize the impact of the uncertainty of the optical functions. For the vertical projection ($y$), the phase advance $\phi+\phi_0$ in \Eq{ttm hill sol} is close to $0$, thereby maximizing the amplitude of $y$ and minimizing the impact of the phase advance uncertainties. Thus the scattering angle can be determined directly from $y$ (cf. \Eq{ttm lin par}): $\th_y^* = y/L_y$. In contrary, for the horizontal projection ($x$), the phase advance is close $\pi/2$. Consequently, it is better to use the angle $\th_x = \d x/\d s$, where the cosine term is replaced by a sine. With the given phase advance, the sine is close to its maximum, moreover the impact of phase advance variations is minimized. The angle $\th_x$ can be reconstructed within each station as $(x_{\rm F} - x_{\rm N}) / d$, where $d$ denotes the distance between near and far RPs (see \Tb{ttm rp station}). To summarize, the scattering angle projections have been reconstructed as follows:
+\> In the {\bf reconstruction} step, the projections of the scattering angle at \abb{IP} (see \Eq{ttm th x y}) are deduced from the \abb{RP} measurements. For each projection a different strategy is used, in order to minimize the impact of the uncertainty of the optical functions. For the vertical projection ($y$), the phase advance $\phi+\phi_0$ in \Eq{ttm hill sol} is close to $0$, thereby maximizing the amplitude of $y$ and minimizing the impact of the phase advance uncertainties. Thus the scattering angle can be determined directly from $y$ (cf. \Eq{ttm lin par}): $\th_y^* = y/L_y$. In contrary, for the horizontal projection ($x$), the phase advance is close $\pi/2$. Consequently, it is better to use the angle $\th_x = \d x/\d s$, where the cosine term is replaced by a sine. With the given phase advance, the sine is close to its maximum, moreover the impact of phase advance variations is minimized. The angle $\th_x$ can be reconstructed within each station as $(x_{\rm F} - x_{\rm N}) / d$, where $d$ denotes the distance between near and far \abb{RP}s (see \Tb{ttm rp station}). To summarize, the scattering angle projections have been reconstructed as follows:
 \eqref{\eqnarray{
 	\hat\th_x^* = {\th_x^{\rm L} + \th_x^{\rm R}\over 2}\ ,\qquad
 		& \th_x^{\rm L} = {x^{45}_{\rm F} - x^{45}_{\rm N}\over L^{45}_{x,\rm F} - L^{45}_{x,\rm N}}\ ,\qquad
@@ -36,9 +36,9 @@ Let us comment on the vertex terms (see \Eq{ttm lin par}) that might seem to be 
 
 \> {\bf Background subtraction}. The event-selection cuts have been applied on the $3\si$ level, thus one may expect a very good efficiency. However, there might have been a handful of non-elastic events that have passed the cuts (i.e.~background). The background study presented in \Sc{felm bckg} is an updated version of the one published in \bref{totem11}. In the old one, the background was subtracted before the acceptance correction, as shown in \Fg{felm scheme}. This approach assumes the same acceptance corrections for signal (elastic scattering) and background. In the updated version, the background acceptance correction is performed separately, and the background is subtracted only afterwards. Within \Fg{felm scheme}, it could be described by switching the background and acceptance correction steps.
 
-\> The {\bf acceptance correction}, as described in \Sc{rp measurement}, is a procedure to correct for the finite size of RP detectors (in other words to correct for some elastic/background events not being detected.)
+\> The {\bf acceptance correction}, as described in \Sc{rp measurement}, is a procedure to correct for the finite size of \abb{RP} detectors (in other words to correct for some elastic/background events not being detected.)
 
-\> The {\bf unsmearing} is a procedure that corrects for the finite resolution of the RPs detectors, for details see \Sc{felm unfold}.
+\> The {\bf unsmearing} is a procedure that corrects for the finite resolution of the \abb{RP}s detectors, for details see \Sc{felm unfold}.
 
 \> In the {\bf normalization} step, the event-count histograms $\d N/\d t$ are transformed in the differential cross-section histograms $\d\si/\d t$. For that purpose, the luminosity and various efficiency factors (trigger, detection, reconstruction, etc.) are used.
 
@@ -62,7 +62,7 @@ As \Eq{felm cut} suggests, all cuts have been applied on a $3\si$-level. Therefo
 
 The task can be split into three parts: the \em{integral} (the number of background events which have passed the selection), the \em{distribution} (in $t_x$ and $t_y$) and the \em{contribution to the elastic $t$-distribution}.
 
-But before the analysis, let us mention what background contributions we expect. From the physics processes these are Double Pomeron Exchange (DPE) events or the pile-up of two Singled Diffraction (SD) events. With the luminosity per bunch collision of about $1.4\cdot10^{25}\un{cm^{-2}}$ and the cross-sections $6.8\un{mb}$ (for SD from Pythia) and $1.3\un{mb}$ (for DPE from Phojet) one obtains per-bunch event probabilities $0.014$ (DPE) and $0.008$ (twice SD with a proton in each arm). Thus both contributions are on the same level of importance. The output of the mentioned MC generators can be, in the first approximation, parameterized as follows:
+But before the analysis, let us mention what background contributions we expect. From the physics processes these are double pomeron exchange (\abb{DPE}) events or the pile-up of two single diffraction (\abb{SD}) events. With the luminosity per bunch collision of about $1.4\cdot10^{25}\un{cm^{-2}}$ and the cross-sections $6.8\un{mb}$ (for \abb{SD} from Pythia) and $1.3\un{mb}$ (for \abb{DPE} from Phojet) one obtains per-bunch event probabilities $0.014$ (\abb{DPE}) and $0.008$ (twice \abb{SD} with a proton in each arm). Thus both contributions are on the same level of importance. The output of the mentioned \abb{MC} generators can be, in the first approximation, parameterized as follows:
 \eqref{
 {\d\si^{\rm SD}\over\d\xi\, \d t } \sim {\e^{b t}\over \xi^{1+\ep}}\ ,\qquad
 {\d\si^{\rm DPE}\over\d\xi_{\rm L} \d t_{\rm L} \d\xi_{\rm R} \d t_{\rm R} } \sim {\e^{b t_{\rm L}}\over \xi^{1+\ep}_{\rm L}} {\e^{b t_{\rm R}}\over \xi_{\rm R}}
@@ -94,7 +94,7 @@ N_{\rm B} & 2500 \pm 300 & 2700 \pm 300\cr\bln
 
 \block{The distribution}
 
-We will assume that the left and right protons are independent in the background events. First of all, it is a reasonable assumption. For pile-up background (SD, beam-gas) it is evident. For DPE described by the cross-section \Eq{felm sd dpe cs} it holds too. Had we enough background data, we could test this hypothesis, however we will see that the statistics is not rich. Taking the assumption, we can factorize the two-proton distribution $h_{\rm 2p}$ into one-proton distributions $h_{\rm 1p}$:
+We will assume that the left and right protons are independent in the background events. First of all, it is a reasonable assumption. For pile-up background (\abb{SD}, beam-gas) it is evident. For \abb{DPE} described by the cross-section \Eq{felm sd dpe cs} it holds too. Had we enough background data, we could test this hypothesis, however we will see that the statistics is not rich. Taking the assumption, we can factorize the two-proton distribution $h_{\rm 2p}$ into one-proton distributions $h_{\rm 1p}$:
 \eqref{h_{\rm 2p}(t_x^{\rm L}, t_y^{\rm L}, t_x^{\rm R}, t_y^{\rm R}) = h_{\rm 1p}(t_x^{\rm L}, t_y^{\rm L})\ h_{\rm 1p}(t_x^{\rm R}, t_y^{\rm R})\ .}{felm bckg dist fact}
 
 We consider these distributions as functions of $t$'s only since we are investigating the background to elastic scattering. Elastic protons have $\xi\equiv 0$ by definition, therefore only $t_x$ and $t_y$ are reconstructed. The same applies to inelastic protons that pass the elastic-event selection as background events. Their $\xi$-distribution is absorbed to an effective $t_x$ and $t_y$ distribution.
@@ -119,7 +119,7 @@ h_{\rm O}(t_x^{\rm L}, t_y^{\rm L}) & = &
 	\ \Th(|t_y^{\rm L}| > |t_y^{\rm L}|_{\rm min})
 \ .\cr
 }}{felm bckg dist obs}
-An example of such distribution is shown in \Fg{felm background dist txty}. To build the histogram, we have used only the events that have failed cut 1 ($\th_x$ collinearity), which anyway provides most background events. One can clearly see the acceptance cut around $|t_y| = 0.3\un{GeV^2}$ (see also \Tb{felm bckg results}), the effect of the last $\Th$ function in \Eq{felm bckg dist obs}. The distribution seems to decrease exponentially with $t = t_x + t_y$, something one would naively expect from the SD and DPE cross-sections \Eq{felm sd dpe cs}. However, if $t$ was distributed exponentially $\exp(b t)$, the corresponding distribution of $t_x$ and $t_y$ would be $\exp(b t_x + b t_y)/\sqrt{t_x t_y}$
+An example of such distribution is shown in \Fg{felm background dist txty}. To build the histogram, we have used only the events that have failed cut 1 ($\th_x$ collinearity), which anyway provides most background events. One can clearly see the acceptance cut around $|t_y| = 0.3\un{GeV^2}$ (see also \Tb{felm bckg results}), the effect of the last $\Th$ function in \Eq{felm bckg dist obs}. The distribution seems to decrease exponentially with $t = t_x + t_y$, something one would naively expect from the \abb{SD} and \abb{DPE} cross-sections \Eq{felm sd dpe cs}. However, if $t$ was distributed exponentially $\exp(b t)$, the corresponding distribution of $t_x$ and $t_y$ would be $\exp(b t_x + b t_y)/\sqrt{t_x t_y}$
 %(the square-root factor comes from the Jacobian)
 . Moreover, we reconstruct the background protons as elastic: the effect of non-zero $\xi$ is absorbed into the observed $t_x$ vs.~$t_y$ distribution. Since the dispersion acts mostly in the horizontal direction, we may expect the $t_x$-distribution to be altered. This consideration has led us to try the suggested parameterization with $b$'s independent for $x$ and $y$:
 \eqref{h_{\rm 1p}(t_x, t_y) \propto {\e^{b_x t_x}\over \sqrt{-t_x}} {\e^{b_y t_y}\over \sqrt{-t_y}}\ .}{felm dist param}
@@ -161,9 +161,9 @@ Thus, the background contribution to the elastic $t$-distribution is given by th
 }{felm bckg el t dist}
 That corresponds to the background contribution ``after the acceptance correction''. For the background, the acceptance correction has been achieved by simply extending the $h_{\rm 2p}$ distribution to the non-observed region (outside acceptance). One can easily modify \Eq{felm bckg el t dist} in order to obtain the background contribution to the elastic $\d N/\d t$ without the acceptance correction -- it is enough to multiply the integrand with $\Th(\hbox{acceptance})$.
 
-We have evaluated the integral \Eq{felm bckg el t dist} with the aid of MC techniques (see the blue histograms in \Fg{felm background cmp}). We have found that the resulting distributions can well be parameterized as:
+We have evaluated the integral \Eq{felm bckg el t dist} with the aid of \abb{MC} techniques (see the blue histograms in \Fg{felm background cmp}). We have found that the resulting distributions can well be parameterized as:
 \eqref{{\d N_{\rm B, el}\over \d t} = a \e^{b t + c t^2}}{felm bckg el t dist param}
-in the parts not affected by the acceptance (see the red solid lines in \Fg{felm background cmp}). In fact, we have made a number of MC simulations. We have taken the mean $h_{\rm 1p}$ parameters from \Tb{felm fit} and varied them within their uncertainties. We have done the same for the background integral $N_{\rm B}$ from \Tb{felm bckg int result}. This has led to the $\d N_{\rm B,el}/\d t$ uncertainty bands which are drawn as red dashed lines in \Fg{felm background cmp}. The mean fit parameters $a$, $b$ and $c$ with their uncertainties are summarized in \Tb{felm bckg results}.
+in the parts not affected by the acceptance (see the red solid lines in \Fg{felm background cmp}). In fact, we have made a number of \abb{MC} simulations. We have taken the mean $h_{\rm 1p}$ parameters from \Tb{felm fit} and varied them within their uncertainties. We have done the same for the background integral $N_{\rm B}$ from \Tb{felm bckg int result}. This has led to the $\d N_{\rm B,el}/\d t$ uncertainty bands which are drawn as red dashed lines in \Fg{felm background cmp}. The mean fit parameters $a$, $b$ and $c$ with their uncertainties are summarized in \Tb{felm bckg results}.
 
 \fig{fig/pdf/felm_background_cmp.pdf}{felm background cmp}{Background-signal comparisons for the diagonal 45 bottom - 56 top. Left: before, Right: after the acceptance correction. The blue histograms are the $\d N_{\rm B, el}/\d t$ simulations with mean $h_{1p}$ and $N_{\rm B}$ parameters. The red lines represent their fits with the parameterization \Eq{felm bckg el t dist param}. The dashed red lines delimit $1\si$ error bands of the background (red) curves. The black histograms correspond to signal+background, i.e.~to all events that have passed the selection cuts.}
 
@@ -245,7 +245,7 @@ As we have anticipated in the introduction, a fit always brings in a certain amb
 
 The ultimate uncertainty has been calculated as the total (maximal) error band for $\si(\De\th) = 12$ and $13\un{\mu rad}$ for both diagonals.
 
-Before we move to the second method, let us verify the validity of the simplified smearing model \Eq{felm unf sm model sim}. Let's take the unsmeared distribution and re-apply the smearing according to the full model \Eq{felm unf sm model}. We have performed the integrations with the help of a MC simulation. The result is shown in \Fg{felm unfolding m1 test}, one can see a perfect match.
+Before we move to the second method, let us verify the validity of the simplified smearing model \Eq{felm unf sm model sim}. Let's take the unsmeared distribution and re-apply the smearing according to the full model \Eq{felm unf sm model}. We have performed the integrations with the help of a \abb{MC} simulation. The result is shown in \Fg{felm unfolding m1 test}, one can see a perfect match.
 
 \fig{fig/pdf/felm_unfolding_m1_test.pdf}{felm unfolding m1 test}{Our unsmearing result smeared again with the full model \Eq{felm unf sm model}, compared to the input data.}
 
@@ -257,7 +257,7 @@ The idea of this method is to ``learn'' the trend of the smearing corrections by
 
 Before applying any smearing step, we should make sure that the input distribution contains enough data. For example, if we like to examine the smeared distribution above a given value $\th_{\rm c}$, the input distribution (before the smearing step) should extend to at least $\th_{\rm c} -3\si(\De\th)$. Therefore, if the distribution after 3 extra smearings should be meaningful above the analysis cut $\th_c = 170\un{\mu rad}$, the measured distribution should be defined down to $(170 - 9\cdot 12.5) \un{\mu rad}\approx 60 \un{\mu rad}$. It is therefore necessary to extrapolate the measured distribution down to that value. To achieve this, we have used the $H$ parameterization (see \Eq{felm unf fm param}), just as in the fit-based method.
 
-The extrapolated smeared distribution is shown in \Fg{felm unfolding m2 addsm}, together with the distributions after the extra smearings which have been calculated with a MC method according to the model \Eq{felm unf sm model sim}. One can see that the effect of smearing is not linear. That is why we have chosen to perform three extra smearing steps -- it allows for a quadratic (the simplest non-linear) extrapolation.
+The extrapolated smeared distribution is shown in \Fg{felm unfolding m2 addsm}, together with the distributions after the extra smearings which have been calculated with a \abb{MC} method according to the model \Eq{felm unf sm model sim}. One can see that the effect of smearing is not linear. That is why we have chosen to perform three extra smearing steps -- it allows for a quadratic (the simplest non-linear) extrapolation.
 
 The correction functions (compatible with the definition \Eq{felm unf fm sm corr}) are displayed in \Fg{felm unfolding m2 corrections}. The ultimate correction has been obtained by a per-bin quadratic extrapolation of the corrections one to three. It is clear that any bin fluctuations get amplified by the extrapolation, thus the fluctuations of the black curve are the most pronounced.
 
