--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -46,6 +46,15 @@
 	url				= "https://edms.cern.ch/document/906715/0.6"
 }
 
+@Techreport{totem-lvdt,
+	author			= "RAVAT, S. and PONS, X.",
+	title			= "Roman Pot Position Calibration Procedure",
+	type			= "EDMS document",
+	number			= "994972",
+	year			= "2009",
+	url				= "https://edms.cern.ch/document/994972/0.1"
+}
+
 @Article{totem10,
       collaboration  = "TOTEM",
       author         = "ANTCHEV G. et al.",
